--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,17 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>3.0.3</version>
+        <configuration>
+          <appName>mancalax</appName>
+          <processTypes>
+            <web>java $JAVA_OPTS -cp target/mancala.jar</web>
+          </processTypes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
