--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
   <groupId>org.sdf.andreoss</groupId>
   <artifactId>mancala</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>The Game Of Mancala</name>
+  <name>mancala</name>
+  <description>The Game Of Mancala</description>
   <dependencies>
     <dependency>
       <groupId>io.helidon.microprofile.bundles</groupId>
@@ -106,6 +107,33 @@
             <web>java $JAVA_OPTS -cp target/mancala.jar</web>
           </processTypes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.1.3</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs</artifactId>
+            <version>4.1.4</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <suppressionsLocation>suppressions.xml</suppressionsLocation>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
